Fixed small bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Prerequisites
 *.d
 Debug/
+Release/
 .vs/
 
 # Visual Studio
@@ -38,5 +39,7 @@ Debug/
 *.out
 *.app
 
+# Miscellaneous
 OpenGl/
 *.htm
+spriteSheet.png
